Health bar is now fully Functional